[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade-optimizer"
version = "0.1.0"
description = "AutoTrade Optimizer MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Codex"}]
dependencies = []

[project.scripts]
autotrade-opt = "autotrade_optimizer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
